--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
   <string name="app_name">My Fun Run</string>
   <string name="title_activity_main">MainActivity</string>
   <!-- Strings used for fragments for navigation -->
-  <string name="first_fragment_label">First Fragment</string>
-  <string name="second_fragment_label">Second Fragment</string>
+  <string name="course_fragment_label">Courses</string>
+  <string name="history_fragment_label">History</string>
   <string name="next">Next</string>
   <string name="previous">Previous</string>
 
