--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,15 @@
 <resources>
   <string name="app_name">My Fun Run</string>
-  <string name="title_activity_main">MainActivity</string>
-  <!-- Strings used for fragments for navigation -->
-  <string name="course_fragment_label">Courses</string>
-  <string name="history_fragment_label">History</string>
-  <string name="next">Next</string>
-  <string name="previous">Previous</string>
-
-  <string name="hello_first_fragment">Hello first fragment</string>
-  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-
-  <!-- TODO: Remove or change this placeholder text -->
-  <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="Home">home_fragment_label</string>
+  <string name="login_failure">Unable to login with provided credentials.</string>
+  <string name="title_activity_navigation">NavigationActivity</string>
+  <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
+  <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
+  <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>
+  <string name="title_home">Home</string>
+  <string name="title_dashboard">Dashboard</string>
+  <string name="title_notifications">Notifications</string>
+
+  <string name="home_second">Home Second</string>
+  <string name="previous">Previous</string>
 </resources>
