--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
   <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
   <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>
   <string name="title_home">Home</string>
-  <string name="title_dashboard">Dashboard</string>
-  <string name="title_notifications">Notifications</string>
+  <string name="title_races">Races</string>
+  <string name="title_history">History</string>
 
   <string name="home_second">Home Second</string>
   <string name="previous">Previous</string>
