--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="permissions_title">Permissions</string>
+
+  <!--TODO ask Nick about these.
+  <string name="instructions">Instructions</string>
+  <string name="title_instructions">Instructions</string>
+
+  <string name="license_url">https://ddc-java.github.io/sliding-tiles/notice</string>
+  <string name="instructions_url">https://ddc-java.github.io/sliding-tiles/instructions</string> -->
 </resources>
