--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
 
   <string name="home_second">Home Second</string>
   <string name="previous">Previous</string>
+  <string name="sign_out">Sign out</string>
+
 
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
