--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
   <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
   <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
   <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>
-  <string name="title_home">Home</string>
+  <string name="my_fun_run">My Fun Run</string>
   <string name="title_races">Races</string>
   <string name="title_history">History</string>
 
@@ -19,6 +19,7 @@
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="permissions_title">Permissions</string>
+  <string name="welcome_runner">Welcome Runner</string>
 
   <!--TODO ask Nick about these.
   <string name="instructions">Instructions</string>
