--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
   <string name="previous">Previous</string>
   <string name="sign_out">Sign out</string>
 
+  <string name="pace_format">%.3f km/hr</string>
+
 
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
